--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint":"eslint --ignore-path .gitignore .",
     "coverage": "react-scripts test --coverage --watchAll --collectCoverageFrom='src/components/**/*.{ts,tsx}'"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:jest-dom/recommended"
     ]
   },
   "browserslist": {
@@ -55,6 +57,7 @@
     }
   },
   "devDependencies": {
+    "eslint-plugin-jest-dom": "^4.0.2",
     "msw": "^0.47.3"
   }
 }
